--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
+
 
 android {
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     compileSdkVersion 23
     buildToolsVersion "23.0.0"
 
@@ -8,8 +16,8 @@ android {
         applicationId "com.mediausjt"
         minSdkVersion 11
         targetSdkVersion 23
-        versionCode 14
-        versionName "2.0.1"
+        versionCode 15
+        versionName "2.1"
     }
     buildTypes {
         release {
@@ -21,6 +29,13 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.android.support:support-v4:23.0.0'
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.android.support:support-v4:23.1.0'
+
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:design:23.1.0'
+}
+
+retrolambda {
+    jdk "/usr/lib/jvm/jdk1.8.0_60"
 }
