--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:icon="@mipmap/usjticon" 
 	android:theme="@style/AppTheme">
 	<activity
-            android:name=".Application.MainActivity"
+            android:name=".Application.MediaActivity"
             android:label="@string/app_name"
             android:configChanges="keyboardHidden|screenSize"
             android:windowSoftInputMode="stateHidden"
