--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,12 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:design:23.1.0'
+
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
+
+    compile 'com.android.support:recyclerview-v7:23.1.0'
+    compile 'com.android.support:support-v4:23.1.0'
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
 }
 
 retrolambda {
