--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
 
     defaultConfig {
         applicationId "com.mediausjt"
-        minSdkVersion 11
+        minSdkVersion 14
         targetSdkVersion 23
         versionCode 15
         versionName "2.1"
@@ -38,8 +38,13 @@ dependencies {
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
 
     compile 'com.android.support:recyclerview-v7:23.1.0'
+    compile 'jp.wasabeef:recyclerview-animators:2.0.0'
+    compile 'com.android.support:cardview-v7:23.1.0'
     compile 'com.android.support:support-v4:23.1.0'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
+
+    compile 'br.com.jansenfelipe:androidmask:1.0.1'
+
 }
 
 retrolambda {
